--- a/_src/_posts/2012-07-06-YAHW.markdown
+++ b/_src/_posts/2012-07-06-YAHW.markdown
@@ -12,4 +12,4 @@ Es fehlt nämlich noch ziemlich viel. Es gibt noch keine Navigation, die beiden 
 
 Wär super, wenn ihr mir noch Ideen, Wünsche, Wunder, etc. zukommen lassen würdet - am besten via [Twitter][] so lange es noch keine Kommentare gibt.
 
-[Twitter]: http;//twitter.com/laerador
+[Twitter]: http://twitter.com/laerador
