Categorypowers now active

--- a/_src/_posts/1970-01-01-Template.markdown
+++ b/_src/_posts/1970-01-01-Template.markdown
@@ -1,9 +1,8 @@
 ---
 layout: post
-category: Hello World
+category: World
 tags: [one, two, three]
 title: This is a template File
-published: false
 ---
 
 # Level 1 Header
