--- a/_src/_posts/1970-01-01-Template.markdown
+++ b/_src/_posts/1970-01-01-Template.markdown
@@ -1,8 +1,9 @@
 ---
 layout: post
-category: World
+category: Hello World
 tags: [one, two, three]
 title: This is a template File
+published: false
 ---
 
 # Level 1 Header
