Support for Link-Posts

--- a/_src/_posts/1970-01-01-Template.markdown
+++ b/_src/_posts/1970-01-01-Template.markdown
@@ -3,6 +3,7 @@ layout: post
 category: Hello World
 tags: [one, two, three]
 title: This is a template File
+link: http://google.com/
 published: false
 ---
 
